# Discord-Delete

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
bot/: __init__.py  archive.py  config.py  db.py  duration.py  main.py
bot/cogs/: config_cog.py  logs_cog.py  sweeper_cog.py
bot/ui/: __init__.py  config_panel.py
migrations/: 001_init.sql
tests/: test_archive.py  test_config.py  test_config_panel.py  test_due.py  test_duration.py  test_lifecycle.py  test_sweeper.py
